k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llmops-monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: llmops
  template:
    metadata:
      labels:
        app: llmops
    spec:
      containers:
        - name: app
          image: ghcr.io/YOUR_USERNAME/llmops-monitoring:latest
          ports:
            - containerPort: 8000
