k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llmops-service
spec:
  type: LoadBalancer
  selector:
    app: llmops
  ports:
    - port: 80
      targetPort: 8000
